test_programs/compile_failure/noirc_frontend_tests_traits_error_on_duplicate_impl_with_associated_constant/src/main.nr

        trait Foo {
            let Bar: u32;
        }

        impl Foo for i32 {
            let Bar = 5;
        }

        impl Foo for i32 {
            let Bar = 6;
        }

        fn main() {}
    